--- a/src/css/style.css
+++ b/src/css/style.css
@@ -80,21 +80,21 @@ section.module.parallax:after {
 }
 
 section.module.parallax-1{
-    background-image: url(/src/images/Screenshot_01.jpg);
+    background-image: url(../../src/images/Screenshot_01.jpg);
 
 }
 
 section.module.parallax-2{
-    background-image: url(/src/images/Screenshot_02.jpg);
+    background-image: url(../../src/images/Screenshot_02.jpg);
 }
 
 section.module.parallax-3{
-    background-image: url(/src/images/Screenshot_03.jpg);
+    background-image: url(../../src/images/Screenshot_03.jpg);
 
 }
 
 section.module.parallax-4{
-    background-image: url(/src/images/Screenshot_04.jpg);
+    background-image: url(../../src/images/Screenshot_04.jpg);
 
 }
 
